<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeScreen" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        >

        <TextView
            android:id="@+id/HStextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/homeWelcome"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <Button
	        android:id="@+id/Button01"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:onClick="gotoApts"
	        android:text="@string/title_activity_appointments" />
	
	    <Button
	        android:id="@+id/button2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/title_activity_diet" 
	        android:onClick="gotoDiet" />
	    
	    <Button
	        android:id="@+id/button5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:onClick="gotoDocs"
	        android:text="@string/title_activity_doctors" />
	    
	    <Button
	        android:id="@+id/button6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/title_activity_emerg_conct"
	        android:onClick="gotoEC" />

	    <Button
	        android:id="@+id/button8"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="Favorites"
	        android:onClick="gotoFavorites" />
	    
	    <Button
	        android:id="@+id/button3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/title_activity_medications"
	        android:onClick="gotoMeds" />
	    
	    <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/title_activity_vital_signs"
	        android:onClick="gotoVitals" />
	    
	    <Button
	        android:id="@+id/button7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:onClick="gotoSearch"
	        android:text="@string/title_activity_search" />
	</TableLayout>

</ScrollView>
