<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Reg" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/title_activity_reg"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/regEditText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/regFirst" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/regEditText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/regEditText1"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/regLast" >
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginTop="20dp"
        android:text="@string/regHeight" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/regEditText4"
        android:text="@string/inches" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regEditText4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/regDOB"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/regButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textView1"
        android:onClick="addToDB"
        android:text="@string/btnRegister" />

    <EditText
        android:id="@+id/regEditText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="Desired Password *"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/regEditText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/regEditText6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="Desired Username *" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/regButton1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="* Required"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView6"
        android:layout_toLeftOf="@+id/textView6"
        android:ems="10"
        android:hint="MM" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText1"
        android:layout_alignBottom="@+id/editText1"
        android:layout_alignRight="@+id/textView6"
        android:layout_toRightOf="@+id/editText1"
        android:ems="10"
        android:hint="DD" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText2"
        android:layout_alignBottom="@+id/editText2"
        android:layout_toRightOf="@+id/editText2"
        android:ems="10"
        android:hint="YYYY" />

    <Button
        android:id="@+id/regButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/regButton1"
        android:layout_alignBottom="@+id/regButton1"
        android:layout_alignRight="@+id/textView7"
        android:layout_toRightOf="@+id/textView1"
        android:background="@color/black"
        android:onClick="regClear"
        android:text="Clear"
        android:textColor="@color/white" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/regEditText2"
        android:layout_below="@+id/regEditText2"
        android:layout_marginLeft="19dp" >

        <RadioButton
        android:id="@+id/regRadioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rdFemale" />
            
        <RadioButton
        android:id="@+id/regRadioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rdMale" />
        
    </RadioGroup>

    <EditText
        android:id="@+id/regEditText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:inputType="number" />

</RelativeLayout>